# pet_breed_classifier

./: .gitignore  README.md  app.py  build.sh  convert_model.py  netlify.toml  package.json  pyproject.toml  requirements-local.txt  requirements.txt  setup.py  vercel.json  vercel_requirements.txt
functions/: app.py  predict.py  requirements.txt
public/: index.html
static/: class_indices.xlsx
templates/: index.html
