[build-system]
requires = [
    "setuptools>=65.0.0",
    "wheel>=0.40.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab-assessment"
version = "1.0.0"
description = "AI Lab Assessment Project"
requires-python = ">=3.12"
dependencies = [
    "flask==2.0.3",
    "Werkzeug==2.0.3",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "pillow==10.2.0",
    "tensorflow==2.16.1",
    "openpyxl==3.1.2",
    "gunicorn==21.2.0",
    "click==8.1.7",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.3",
    "MarkupSafe==2.1.3"
] 