[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-lab-assessment"
version = "1.0.0"
description = "AI Lab Assessment Project"
requires-python = ">=3.9"
dependencies = [
    "flask==2.0.3",
    "Werkzeug==2.0.3",
    "numpy==1.24.3",
    "pandas==1.5.3",
    "pillow==9.5.0",
    "tflite-runtime==2.5.0",
    "openpyxl==3.0.10",
    "gunicorn==20.1.0"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app.py"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"] 