[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-lab-assessment"
version = "1.0.0"
description = "AI Lab Assessment Project"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.1.3",
    "numpy==1.26.4",
    "pandas==2.1.3",
    "Pillow==10.1.0",
    "tensorflow==2.19.0",
    "openpyxl==3.1.2",
    "gunicorn==21.2.0",
    "click==8.1.8",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2"
]

[tool.setuptools]
packages = ["app"]

[project.urls]
Homepage = "https://github.com/yourusername/ai-lab-assessment"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py312"] 